k8s/l8v2-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l8v2-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l8v2-be
  template:
    metadata:
      labels:
        app: l8v2-be
    spec:
      containers:
      - name: l8v2-be
        image: yourusername/l8v2-be:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: l8v2-be
spec:
  type: ClusterIP
  selector:
    app: l8v2-be
  ports:
    - port: 3000
      targetPort: 3000
