k8s/l8v2-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l8v2-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l8v2-db
  template:
    metadata:
      labels:
        app: l8v2-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: l8v2-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: l8v2-db
spec:
  type: ClusterIP
  selector:
    app: l8v2-db
  ports:
    - port: 5432
      targetPort: 5432
