k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l8v2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/(.*)
        backend:
          service:
            name: l8v2-be
            port:
              number: 3000
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: l8v2-fe
            port:
              number: 80
